# Dextop

./: .gitignore  CMakeLists.txt  Dextop.sln  README.md
Dextop/: CMakeLists.txt  Dextop.cpp  Dextop.h  Dextop.vcxproj  Dextop.vcxproj.filters  Dexxor.cpp  Dexxor.h  Logger.cpp  SearchResult.qml  UIProxy.cpp  UIProxy.h  main.cpp  main.qml  qml.qrc
src/: AssetManager.cpp  AssetManager.h  Dextop.cpp  Dextop.h  DextopUtil.h  Dextop_Defs.h  Dexxor.cpp  Dexxor.h  Logger.cpp  Logger.h  Reader.h  ThreadPool.h
src/uicon/: MainSearch.h  MainUpdates.h  Reader.h
ui/: DextopPrimaryWindow.slint  DextopReader.slint  Reader.slint
